Feat: Cadastro de Atividade e Instalação
