# backend/app/Models/Instalacao.php
@@ -1,0 +1,16 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Instalacao extends Model
+{
+    protected $table = "instalacao";
+
+    protected $fillable = [
+        "codigo",
+        "nome",
+        "ativo"
+    ];
+}
